email-extractor-s3/k8s/s3-app-pod-testing.yaml
apiVersion: v1
kind: Pod
metadata:
  name: s3-app
  namespace: email-extractor
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: kubernetes.io/arch
            operator: In
            values:
            - amd64
            - arm64
  serviceAccountName: s3-csi-driver-sa  # This is the important line
  containers:
    - name: app
      image: ubuntu
      command: ["/bin/sh"]
      args: ["-c", "echo 'Hello from the container!' >> /mnt/s3/$(date -u).txt; tail -f /dev/null"]
      volumeMounts:
        - name: persistent-storage
          mountPath: /mnt/s3
  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: email-extractor-s3-pvc
